--- a/Отчет по л.р.№2.md
+++ b/Отчет по л.р.№2.md
@@ -153,13 +153,13 @@
 
 Задание 4: *Разработайте макет формы регистрации пользователя, представленный ниже на рисунке 1. Сохраните макет в файл lab2_form.html. Стилизация макета не требуется. Код должен быть валидирован под HTML5.*
 
-<p align=center><img src=./Images/form.png></p>
+<p align=center><img src=./Images/form.PNG></p>
 
 <p align=center>Рисунок 1 - требуемый макет формы регистрации нового пользователя
 
 В соответствии с заданием макет формы регистрации пользователя был построен и сохранен в указанный файл. Построенный макет представлен на рисунке 2. Листинг страницы lab2_form.html находится в приложении А.
 
-<p align=center><img src=./Images/myform.png></p>
+<p align=center><img src=./Images/myform.PNG></p>
 
 <p align=center>Рисунок 2 - построенный макет формы регистрации нового пользователя
 
