--- a/отчет по л.р. №3.md
+++ b/отчет по л.р. №3.md
@@ -93,49 +93,49 @@
 <p align = center>Листинг html-страницы
 
     <!DOCTYPE html>
-        <html lang="en">
+    <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
-        <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
     </head>
     <body>
-        <div class="bg_white">
-            <header>
-                <img src="./Images/Logo.svg" alt="logo" class="logo">
-                <div class="square"><img src="./Images/Shape.svg" alt="shape" class="shape"></div>
-                <img src="./Images/lupa.svg" alt="Path" class="Path">
-                <img src="./Images/Oval.svg" alt="oval" class="oval">
-                <img src="./Images/upOval.svg" alt="upOval" class="upOval"><p class ="up8">8</p>
-            </header>
-            <main>
-                <section class="block1">
-                    <p class="blue"></p>
-                    <ul class="menu">
-                        <li><img src="./Images/slot1.svg" alt="Assasin"></li>
-                        <li><img src="./Images/slot2.svg" alt="Fantastic"></li>
-                        <li><img src="./Images/slot3.svg" alt="Strange"></li>
-                        <li><img src="./Images/slot4.svg" alt="Secret"></li>
-                        <li><img src="./Images/slot5.svg" alt="WW"></li>
-                    </ul>
-                    <section>
-                        <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black1">
-                        <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black2">
-                        <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black3">
-                        <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black4">
-                        <img src="./Images/Red.svg" alt="Red" class="Red">
-                        <p class="Rectangle3"></p>
-                        <img src="./Images/Shape2.svg" alt="Shape2" class="Shape2">
-                        <img src="./Images/Shape3.svg" alt="Shape3" class="Shape3">
-                        <img src="./Images/Shape4.svg" alt="Shape4" class="Shape4">
-                        <img src="./Images/Shape.svg" alt="Shape" class="Ticket_Shape">
-                    </section>
-                    <section>
-                        <p class="next"></p>
-                        <img src="Images/Next.svg" alt="Next" class="Button_Next">
-                    </section>
+    <div class="bg_white">
+        <header>
+            <img src="./Images/Logo.svg" alt="logo" class="logo">
+            <div class="square"><img src="./Images/Shape.svg" alt="shape" class="shape"></div>
+            <img src="./Images/lupa.svg" alt="Path" class="Path">
+            <img src="./Images/Oval.svg" alt="oval" class="oval">
+            <img src="./Images/upOval.svg" alt="upOval" class="upOval"><p class ="up8">8</p>
+        </header>
+        <main>
+            <section class="block1">
+                <p class="blue"></p>
+                <ul class="menu">
+                    <li><img src="./Images/slot1.svg" alt="Assasin"></li>
+                    <li><img src="./Images/slot2.svg" alt="Fantastic"></li>
+                    <li><img src="./Images/slot3.svg" alt="Strange"></li>
+                    <li><img src="./Images/slot4.svg" alt="Secret"></li>
+                    <li><img src="./Images/slot5.svg" alt="WW"></li>
+                </ul>
+                <section>
+                    <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black1">
+                    <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black2">
+                    <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black3">
+                    <img src="Images/Grad_Black.svg" alt="bg" class="bg_gr_black4">
+                    <img src="./Images/Red.svg" alt="Red" class="Red">
+                    <p class="Rectangle3"></p>
+                    <img src="./Images/Shape2.svg" alt="Shape2" class="Shape2">
+                    <img src="./Images/Shape3.svg" alt="Shape3" class="Shape3">
+                    <img src="./Images/Shape4.svg" alt="Shape4" class="Shape4">
+                    <img src="./Images/Shape.svg" alt="Shape" class="Ticket_Shape">
+                </section>
+                <section>
+                    <p class="next"></p>
+                    <img src="Images/Next.svg" alt="Next" class="Button_Next">
+                </section>
 
             </section>
             <section class="block2">
@@ -213,12 +213,36 @@
             <div class="block4">
                 <div class="Top250">
                     <ul class="img_Box_office">
-                        <li><img src="./Images/box1.svg" alt="box"></li>
-                        <li><img src="./Images/box2.svg" alt="box"></li>
-                        <li><img src="./Images/box3.svg" alt="box"></li>
-                        <li><img src="./Images/box4.svg" alt="box"></li>
-                        <li><img src="./Images/box5.svg" alt="box"></li>
-                        <li><img src="./Images/box6.svg" alt="box"></li>
+                        <li><img src="./images/top1.svg" alt="top"></li>
+                        <li><img src="./images/top2.svg" alt="top"></li>
+                        <li><img src="./images/top3.svg" alt="top"></li>
+                        <li><img src="./images/top4.svg" alt="top"></li>
+                        <li><img src="./images/top5.svg" alt="top"></li>
+                        <li><img src="./images/top6.svg" alt="top"></li>
+                    </ul> 
+                </div>
+                <div class="randommovie">
+                    <div class="poster">
+                        <img src="./images/Guardians.svg" alt="img">
+                        <p class="shadow1"></p>
+                        <img src="./images/tag1.svg" class="tag1" alt="tag1">
+                        <img src="./images/tag2.svg" class="tag2" alt="tag1">
+                        <img src="./images/tag3.svg" class="tag3" alt="tag1">
+                        <img src="./images/tag4.svg" class="tag4" alt="tag1">
+                        <img src="./images/tag5.svg" class="tag5" alt="tag1">
+                        <img src="./images/tag6.svg" class="tag6" alt="tag1">
+  
+                        
+                    </div>                
+                </div>
+                <div class="Box_office">
+                    <ul class="img_Box_office">
+                        <li><img src="./images/box1.svg" alt="box"></li>
+                        <li><img src="./images/box2.svg" alt="box"></li>
+                        <li><img src="./images/box3.svg" alt="box"></li>
+                        <li><img src="./images/box4.svg" alt="box"></li>
+                        <li><img src="./images/box5.svg" alt="box"></li>
+                        <li><img src="./images/box6.svg" alt="box"></li>
                     </ul> 
                 </div>
                 <div class="Recently_ciewed">
@@ -281,8 +305,8 @@
        </div>
     </footer>
     </div>
-</body>
-</html>
+    </body>
+    </html>
 
 
 
