--- a/Отчет по л.р №4.md
+++ b/Отчет по л.р №4.md
@@ -93,7 +93,7 @@
 
 При вычислении варианта задания был получен 2 варинт работы. Макет сайта для 2 варианта представлен ниже на рисунке 1.
 
-<p align=center><img src=./Images/Home_main.jpg></p>
+<p align=center><img src=./Images/Home_Main.jpg></p>
 
 <p align=center>Рисунок 1 - Макет homepage</p>
 
